--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,9 @@ body {
   background: #fff;
   padding:0px;
   margin:0px;
+  height:100%;
 }
+html{ height:100%;}
 #wrapper{
 width:960px;
 margin:auto;
@@ -34,6 +36,9 @@ clear:both;
 background-color:#FAFAFA;
 margin:auto;
 width:960px;
+position:absolute;
+bottom:0px;
+text-align:center;
 }
 #msgs{
 margin:auto;
@@ -385,5 +390,6 @@ cursor:pointer;
 font-size:12px;
 text-decoration:none;
 border-bottom:1px dashed #000;
-color:gray;
+color:blue;
+cursor:pointer;
 }
