--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,14 @@
   Created:     2010-03-17
   Description: Stylesheet for Chapter 3
 ----------------------------------------*/
+body:before {
+	content:"";
+	height:100%;
+	float:left;
+	width:0;
+	margin-top:-32767px;/
+}
+
 .clear{
 clear:both;
 }
@@ -19,6 +27,7 @@ html{ height:100%;}
 #wrapper{
 width:960px;
 margin:auto;
+min-height:100%;
 }
 #header{
 width:960px;
@@ -36,9 +45,10 @@ clear:both;
 background-color:#FAFAFA;
 margin:auto;
 width:960px;
-position:absolute;
-bottom:0px;
 text-align:center;
+position: relative;
+margin-top: -100px;
+height: 100px;
 }
 #msgs{
 margin:auto;
@@ -106,7 +116,11 @@ right:5px;
 width:300px;
 height:300px;
 }
-#present{position:relative;}
+#present{
+position:relative;
+overflow:auto;
+padding-bottom:100px;
+}
 #center{
 }
 
@@ -315,6 +329,9 @@ overflow-y:scroll;
 background-color:#FF9;
 border-top-left-radius:15px;
 border-bottom-left-radius:15px;
+}
+#taxist_msg ul ul, #client_msg ul ul{
+background-color:inherit;
 }
 #msgs .commentsDiv{
 padding-left:5px;
