--- a/style/css/demo_table.css
+++ b/style/css/demo_table.css
@@ -275,8 +275,9 @@ td.group {
 }
 
 td.details {
-	background-color: #d1cfd0;
-	border: 2px solid #A19B9E;
+	padding-left:0px !important;
+	padding-right:0px !important;
+	border-bottom:0px !important;
 }
 
 
